# Flapmapp.AI-assignment

./: README.md
Opencv/: .gitignore  .gitkeep  README.md
Opencv/app/: CMakeLists.txt  build.gradle.kts
Opencv/app/src/main/: AndroidManifest.xml
Opencv/app/src/main/assets/: index.html  viewer.js
Opencv/app/src/main/java/com/example/myapplication/: CameraPreview.kt  MainActivity.kt  WebServer.kt
Opencv/app/src/main/java/gl/: MyGLRenderer.kt
Opencv/app/src/main/jni/: native-lib.cpp
Opencv/gradle/wrapper/: gradle-wrapper.properties
